<resources>
    <string name="app_name">AMI</string>
    <string name="navigation_drawer_open">Abrir menú</string>
    <string name="navigation_drawer_close">Cerrar menú</string>
    <string name="vertical_ellipsis">&#8942;</string>
    <string name="times">&#215;</string>
    <string name="error_invalid_email">Correo no válido</string>
    <string name="error_invalid_name">Nombre no válido</string>
    <string name="error_field_required">Campo requerido</string>
    <string name="error_on_connection">Parece que no tienes conexión a Internet</string>
    <string name="retry">Volver a intentar</string>
    <string name="did_forget_your_pass">¿Olvidaste tu contraseña?</string>
    <string name="close_without_save">¿Estás seguro que quieres salir?</string>
    <string name="close_without_save_title">Existen cambios sin guardar</string>
    <string name="gettingData">Obteniendo datos</string>
    <string name="wait">Espere por favor…</string>
    <string name="yes">Si</string>
    <string name="no">No</string>
    <string name="continueDialog">Continuar</string>
    <string name="cancel">Cancelar</string>
    <string name="reactivateAccountSuccess">Tu cuenta ha sido activada exitosamente… ¡Nos alegra verte otra vez!</string>
    <string name="reactivateAccountFail">No se ha podido activar tu cuenta, inténtalo más tarde</string>
    <string name="activatingAccount">Activando tu cuenta</string>
    <string name="nav_edit_profile">Mi Perfil</string>
    <string name="nav_reserve_needs">Mis Ofertas</string>
    <string name="nav_reservations">Mis Promociones</string>
    <string name="nav_logout">Cerrar Sesión</string>
    <string name="nav_contact_us">Contáctanos</string>
    <string name="nav_group_communication">Comunícate</string>
    <string name="title_activity_login">Inicio sesión</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Ingresar</string>
    <string name="email_dont_exist">No existe una cuenta con el correo ingresado</string>
    <string name="ask_new_account">¿Quieres registrarte?</string>
    <string name="action_sign_in_short">Listo</string>
    <string name="error_invalid_password">Contraseña demasiado corta</string>
    <string name="error_match_password">Las contraseñas no coinciden</string>
    <string name="error_incorrect_password">Datos incorrectos.</string>
    <string name="permission_rationale">"Permisos requeridos para acceder a Contactos."</string>
    <string name="titleActivityRegister">Registro</string>
    <string name="promptPasswordRepeat">Repetir contraseña</string>
    <string name="actionSignUp">Registrar</string>
    <string name="promptName">Nombre</string>
    <string name="promptLastnames">Apellidos</string>
    <string name="registrateEnAMI">Regístrate en AMI</string>
    <string name="email_already_exist">"El email ingresado ya esta asociado a una cuenta"</string>
    <string name="reactivate_account_closed_title">"Reactivar cuenta"</string>
    <string name="reactivate_account_closed_message">"Introduce tu contraseña para activar tu cuenta"</string>
    <string name="account_closed">"Esta cuenta ha sido cerrada previamente, ¿deseas volver a activarla?"</string>
    <string name="insert_another_email">"Ingresa otro correo"</string>
    <string name="titleActivityRestorePass">Restablecer contraseña</string>
    <string name="actionRestablecerPass">Enviar</string>
    <string name="ingresaCorreo">Ingresa tu correo registrado</string>
    <string name="action_map">Mapa</string>
    <string name="action_home">Inicio</string>
    <string name="action_config">Configuración</string>
    <string name="action_logout">Cerrar sesión</string>
    <string name="profileName">Nombre</string>
    <string name="profileLastnames">Apellidos</string>
    <string name="profileEmail">Correo</string>
    <string name="profileDate">Fecha de nacimiento</string>
    <string name="profileOccupation">Ocupación</string>
    <string name="profileGender">Género</string>
    <string name="profileClosingAccount">Cerrando tu cuenta</string>
    <string name="profileCloseAccountSuccess">Tu cuenta ha sido cerrada exitosamente… ¡Esperamos verte otra vez!</string>
    <string name="profileCloseAccountFail">No se ha podido cerrar tu cuenta, inténtalo más tarde</string>
    <string name="titleActivityMyProfile">Mi Perfil</string>
    <string name="myProfileLeyend">Tus Puntos: %s</string>
    <string name="myProfilePhone">Teléfono</string>
    <string name="myProfileEdit">Editar</string>
    <string name="myProfileCloseAccount">Cerrar mi cuenta</string>
    <string name="myProfileCloseAccountAlertTitle">Cerrar cuenta</string>
    <string name="myProfileCloseAccountAlertMessage">¿Estás seguro que quieres cerrar tu cuenta?</string>
    <string name="myProfileCloseAccountAlertDialogMessage">Ingresa tu contraseña para confirmar</string>
    <string name="titleActivityEditProfile">Editar Perfil</string>
    <string name="getProfileError">No se pudo obtener su perfil</string>
    <string name="editProfileLeyend">Aquí puedes actualizar tus datos</string>
    <string name="editProfileSave">Guardar</string>
    <string name="editProfilePhone">Teléfono (Opcional)</string>
    <string name="editProfileFetchingFail">No se han podido obtener tus datos correctamente</string>
    <string name="saving">Guardando los datos</string>
    <string name="saveOk">Tus datos se han guardado correctamente</string>
    <string name="restoreEmailSend">Se ha enviado un email de restauración</string>
    <string name="restoreEmailNotExists">No se encuentra una cuenta con el email ingresado</string>
    <string name="saveFail">Tus datos no se han podido guardar, inténtalo más tarde nuevamente</string>
    <string name="duplicateUser">Ya existe una cuenta con el email ingresado</string>
    <string name="dateDialog">Ingrese su cumpleaños</string>
    <string name="errorInvalidName">Este nombre parece ser inválido</string>
    <string name="defaultOccupation">Otro</string>
    <string name="defaultGender">Otro</string>
    <string name="OrderListTitle">Tus Pedidos</string>
    <string name="OrderNDiscard">Ofertas descartadas:</string>
    <string name="OrderNRecived">Ofertas recibidas:</string>
    <string name="OrderListTitleEmpty">¡Oops! \n No tienes pedidos recientes :(</string>
    <string name="OrderCardViewTittle">Titulo del pedido</string>
    <string name="OrderCardViewDescription">Descripción del pedido</string>
    <string name="OrderCardViewN">N</string>
    <string name="OrderCardViewDateFin">XX/XX/XXXX</string>
    <string name="OrderCardViewPriceMax">$x.xxx</string>
    <string name="CreateNeedTitle">Realiza tu pedido</string>
    <string name="NeedLeyend">¿Qué necesitas?</string>
    <string name="NeedData">Detalles del pedido</string>
    <string name="NeedMoney">¿Cuánto es tu presupuesto?</string>
    <string name="NeedUserTitle">Titulo del pedido</string>
    <string name="NeedWait">Enviando pedido</string>
    <string name="invalid_money">Ingresar solo dinero</string>
    <string name="NeedCategorySpinner">Categoría</string>
    <string name="NeedSubcategorySpinner">Subcategoría</string>
    <string name="NeedCategoryTable">Categoría</string>
    <string name="NeedCompanyTable">Empresas Disponibles</string>
    <string name="NeedRegistered">¡Tu pedido ha sido enviado!</string>
    <string name="NeedError">Tus datos no se han podido guardar, inténtalo más tarde nuevamente</string>
    <string name="categoriesNoSelected">Seleccionar Categoría</string>
    <string name="subCategoriesNoSelected">Seleccionar Subcategoría</string>
    <string name="NeedDaysTitle">¿Cuántos días puedes esperar?</string>
    <string name="NeedButtonText">Enviar Pedido</string>
    <string name="NeedUserLocation">Usar mi ubicación</string>
    <string name="OrderViewDetails">Detalle pedido</string>
    <string name="OrderViewTittle">Título del pedido</string>
    <string name="OrderViewWait">¡Espera a que lleguen las ofertas de las empresas!</string>
    <string name="OrderSubcategory">Subcategoría</string>
    <string name="OrderViewDescription">Descripción</string>
    <string name="OrderViewPrice">Tu presupuesto es: $xxx.xxx</string>
    <string name="OrderViewPrice2">Tu presupuesto es: </string>
    <string name="OrderViewExpiryTime">¡Recuerda! \n Tu pedido expira en \n xDias XXh:XXm:XXs</string>
    <string name="OrderViewExpiryFragmentOrder">¡Recuerda! \n Tu pedido expira en \n </string>
    <string name="OrderViewExpiryCreateOrder">Tu pedido expira en \n</string>
    <string name="OrderViewExpiryTodayCreateOrder">Tu pedido vence \n hoy</string>
    <string name="OrderButtonDelete">Eliminar pedido</string>
    <string name="OrderDelete">El pedido ha sido eliminado</string>
    <string name="OrderDeleteConfirm">¿Desea eliminar este pedido?</string>
    <string name="OrderConfirmAction">Confirme la acción</string>
    <string name="OrderDeleteYes">Eliminar</string>
    <string name="OrderDeleteProcessing">Eliminando pedido</string>
    <string name="OrderDeleteOk">El pedido ha sido eliminado</string>
    <string name="OfferEmpty">¡Oops! \n No tienes ofertas recientes :(</string>
    <string name="OfferExpired">Oferta expirada</string>
    <string name="OfferDetails">Detalle oferta</string>
    <string name="OfferCompanies">Ofertas recibidas</string>
    <string name="OfferLocalDetails">Información local</string>
    <string name="OfferLocalStreetView">StreetView local</string>
    <string name="OfferExpiredShort">Expirada</string>
    <string name="OfferExpired2">Expira en \n</string>
    <string name="OfferCardViewTime">Expira en: \n xxdías xxH:xxm:xxs</string>
    <string name="OfferCardViewTittle">Titulo oferta</string>
    <string name="OfferCardViewDescription">Descripcion de la oferta</string>
    <string name="OfferCardViewPrice">$x.xxx</string>
    <string name="OfferCardViewCompany">Empresa</string>
    <string name="OfferViewCardViewNameProduct">Nombre producto</string>
    <string name="OfferViewCardViewPriceProduct">$xx.xxx</string>
    <string name="OfferViewCardViewDescriptionProduct">Descripción</string>
    <string name="OfferViewCompany">Empresa</string>
    <string name="OfferViewTittle">Título oferta</string>
    <string name="OfferViewDescription">Descripción de la oferta</string>
    <string name="OfferViewPrice">$x.xxx</string>
    <string name="OfferViewPriceCU">c/u</string>
    <string name="OfferViewDsctTxt">Descuento</string>
    <string name="OfferViewDsct">-x.x%</string>
    <string name="OfferViewOffer">Oferta</string>
    <string name="OfferViewMaxPerson">¡Puedes reservar hasta x unidades!</string>
    <string name="OfferViewAcceptOfferProcessing">Aceptando oferta</string>
    <string name="OfferViewDiscardOfferProcessing">Rechazando oferta</string>
    <string name="OfferViewAcceptOffer">¡Oferta aceptada!</string>
    <string name="OfferViewDiscardOffer">¡Oferta rechazada!</string>
    <string name="OfferViewAcceptOfferFail">No se ha podido reservar</string>
    <string name="OfferViewDiscardOfferFail">No se ha podido rechazar</string>
    <string name="OfferViewMaxppWarnings">¡Puedes reservar hasta %s unidades!</string>
    <string name="OfferViewMaxppWarning">¡Puedes reservar hasta %s unidad!</string>
    <string name="OfferViewLocalAdress">#Dirección, Comuna</string>
    <string name="OfferViewLocalWebText">Más información en</string>
    <string name="OfferViewLocalWebExample">wwww.webempresa.cl</string>
    <string name="OfferViewLocalStreetView">Ver street view</string>
    <string name="OfferViewLocalMap">Ver street view</string>
    <string name="OfferViewLocalInfo">Ver información local</string>
    <string name="OrdersReservations">Mis ofertas reservadas</string>
    <string name="OfferReservedEmpty">¡Oops! \n No tienes reservas recientes :(</string>
    <string name="OfferReservedExpired">Oferta expirada</string>
</resources>