<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group>
        <item
            android:id="@+id/nav_edit_profile"
            android:icon="@drawable/nav_edit_profile"
            android:title="@string/nav_edit_profile" />
        <item
            android:id="@+id/nav_my_preferences"
            android:icon="@drawable/nav_my_preferences"
            android:title="@string/nav_my_preferences" />
        <item
            android:id="@+id/nav_reservations"
            android:icon="@drawable/nav_reservations"
            android:title="@string/nav_reservations" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/nav_settings"
            android:title="@string/nav_settings" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_menu_logout"
            android:title="@string/nav_logout" />
    </group>

    <item android:title="@string/nav_group_communication">
        <menu>
            <item
                android:id="@+id/nav_contact_us"
                android:icon="@drawable/nav_contact_us"
                android:title="@string/nav_contact_us" />
        </menu>
    </item>

</menu>
