<android.support.v7.widget.CardView
    android:id="@+id/need_offer_card_view"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    card_view:cardUseCompatPadding="true"
    card_view:cardCornerRadius="2dp"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="?android:attr/selectableItemBackground">


        <LinearLayout
            android:id="@+id/offer_linear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Imagen Oferta -->
            <ImageView
                android:id="@+id/iv_offer_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/ic_loading_image"
                />

            <!-- Tiempo de expiracion -->
            <TextView
                android:id="@+id/tv_offer_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/OfferCardViewTime"
                android:gravity="center_horizontal"
                />

        </LinearLayout>

        <!-- Separador -->
        <View
            android:id="@+id/separator"
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_toEndOf="@+id/offer_linear"
            android:background="#afafaf"
            android:layout_alignTop="@+id/offer_linear"
            android:layout_alignBottom="@+id/tv_offer_company"
            />

        <!-- Titulo oferta -->
        <TextView
            android:id="@+id/tv_offer_tittle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/OfferCardViewTittle"
            android:gravity="top"
            android:textStyle="bold"
            android:layout_toEndOf="@+id/separator"
            android:layout_alignTop="@+id/separator"
            android:layout_marginStart="10dp"
            android:textSize="16sp" />


        <!-- Descripcion de la oferta -->
        <TextView
            android:id="@+id/tv_offer_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="italic"
            android:layout_marginTop="10dp"
            android:text="@string/OfferCardViewDescription"
            android:layout_alignStart="@+id/tv_offer_tittle"
            android:layout_below="@+id/tv_offer_tittle"/>


        <!-- Precio de la oferta -->
        <TextView
            android:id="@+id/tv_offer_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/OfferCardViewPrice"
            android:layout_alignParentEnd="true"
            android:layout_alignBottom="@+id/tv_offer_company"
            />

        <!-- Empresa de la oferta -->
        <TextView
            android:id="@+id/tv_offer_company"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/OfferCardViewCompany"
            android:gravity="center"
            android:layout_toEndOf="@+id/separator"
            android:layout_alignStart="@+id/tv_offer_tittle"
            android:layout_alignBottom="@+id/offer_linear" />


    </RelativeLayout>
</android.support.v7.widget.CardView>